--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bible Verse Finder</title>
+    <title>VerseFlow</title>
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Bible Verse Display</h1>
+        <h1>VerseFlow</h1>
 
         <!-- Start and Stop Listening Buttons -->
         <div class="listening-controls">
