--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>VerseFlow</h1>
+    </header>
+    <div class="container">
 
         <!-- Start and Stop Listening Buttons -->
         <div class="listening-controls">
